# refdraw

./: CMakeLists.txt  main.cpp
document/: canvas.cpp  canvas.h  hash.h
resources/: vulkan_resources.cpp  vulkan_resources.h
ui/: ui.cpp  ui.h  video_fragment.glsl  video_vertex.glsl
